# visage

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md
.claude/: settings.local.json
.github/workflows/: format.yml  format_style.yml  windows-test.yaml
build_wasm/: CPackConfig.cmake  CPackSourceConfig.cmake
build_wasm/examples/EmbeddedFontResources_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  embedded_files2.cpp  embedded_files3.cpp  example_fonts.h
build_wasm/examples/EmbeddedIconResources_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  embedded_files2.cpp  embedded_files3.cpp  embedded_files4.cpp  embedded_files5.cpp  example_icons.h
build_wasm/examples/EmbeddedImageResources_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  example_images.h
build_wasm/examples/EmbeddedShaderResources_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  embedded_files11.cpp  embedded_files12.cpp  embedded_files13.cpp  embedded_files14.cpp  embedded_files15.cpp  embedded_files16.cpp  embedded_files17.cpp  embedded_files18.cpp  embedded_files20.cpp  embedded_files21.cpp  embedded_files3.cpp  embedded_files4.cpp  embedded_files6.cpp  embedded_files8.cpp  embedded_files9.cpp  example_shaders.h
build_wasm/examples/builds/Faveworm/: index.html  index.js
build_wasm/examples/shaders/essl/: fs_crt  fs_glitch  fs_gray_scale  fs_overlay  fs_sepia  fs_shader_quad  fs_warp  vs_custom  vs_overlay  vs_shader_quad
build_wasm/include/visage/: app.h  graphics.h  ui.h  utils.h  widgets.h  windowing.h
build_wasm/visage_app/: visage_app_amalgamated1.cpp
build_wasm/visage_graphics/: visage_graphics_amalgamated1.cpp  visage_graphics_amalgamated2.cpp  visage_graphics_amalgamated3.cpp
build_wasm/visage_graphics/VisageEmbeddedFonts_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  embedded_files2.cpp  fonts.h
build_wasm/visage_graphics/VisageEmbeddedIcons_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  embedded_files2.cpp  embedded_files3.cpp  icons.h
build_wasm/visage_graphics/VisageEmbeddedShaders_generated/embedded/: embedded_files0.cpp  embedded_files1.cpp  embedded_files10.cpp  embedded_files11.cpp  embedded_files12.cpp  embedded_files13.cpp  embedded_files14.cpp  embedded_files15.cpp  embedded_files16.cpp  embedded_files17.cpp  embedded_files18.cpp  embedded_files19.cpp  embedded_files2.cpp  embedded_files20.cpp  embedded_files21.cpp  embedded_files22.cpp  embedded_files23.cpp  embedded_files24.cpp  embedded_files25.cpp  embedded_files26.cpp  embedded_files27.cpp  embedded_files28.cpp  embedded_files29.cpp  embedded_files3.cpp  embedded_files30.cpp  embedded_files31.cpp  (+55 more)
build_wasm/visage_ui/: visage_ui_amalgamated1.cpp
build_wasm/visage_utils/: visage_utils_amalgamated1.cpp
build_wasm/visage_widgets/: visage_widgets_amalgamated1.cpp  visage_widgets_amalgamated2.cpp
cmake/: download.cmake
examples/: CMakeLists.txt  Info.plist.in  emscripten_template.html
examples/Basic/: basic.cpp
examples/Bloom/: bloom.cpp
examples/ClapPlugin/: clap_plugin.cpp  clap_plugin.h
examples/Faveworm/: AGENTS.md  FilterJoystick.h  FilterMorpher.h  README.md  TestSignalGenerator.h  faveworm.cpp
examples/Faveworm/dsp/: dfl_FastMath.h  dfl_RPMOscillator.h
examples/Gradients/: gradients.cpp
examples/MultiWindow/: multi_window.cpp
examples/Paths/: paths.cpp
examples/PostEffects/: post_effects.cpp
examples/Showcase/: examples_frame.cpp  examples_frame.h  showcase.cpp  showcase.h
examples/shaders/: fs_glitch.sc
integrations/: CMakeLists.txt
integrations/juce/: CMakeLists.txt  README.md  TEST_PLAN.md  example.cpp  integration_test.cpp  juce_visage_bridge.cpp  juce_visage_bridge.h  simple_test.cpp  test_app.cpp  test_application.cpp
visage_app/: CMakeLists.txt  application_editor.cpp  application_editor.h  application_window.cpp  application_window.h  window_event_handler.cpp  window_event_handler.h
visage_app/tests/: integration_tests.cpp
visage_graphics/: CMakeLists.txt  canvas.cpp  canvas.h  color.h  font.cpp  font.h  gradient.cpp  gradient.h  graphics_utils.cpp  graphics_utils.h  image.cpp  image.h  layer.cpp  layer.h  palette.cpp  path.cpp  path.h  post_effects.cpp  post_effects.h  region.cpp  region.h  renderer.cpp  renderer.h  screenshot.h  shape_batcher.cpp  shape_batcher.h  shapes.cpp  shapes.h  svg.cpp  svg.h  text.h  uniforms.h  windowless_context.h
visage_graphics/shaders/: fs_circle.sc  fs_clear.sc  fs_color.sc  fs_diamond.sc  fs_flat_arc.sc  fs_flat_segment.sc  fs_graph_line.sc  fs_heat_map.sc  fs_line.sc  fs_line_fill.sc  fs_path_fill.sc  fs_quadratic_bezier.sc  fs_rectangle.sc  fs_rounded_arc.sc  fs_rounded_rectangle.sc  fs_rounded_segment.sc  fs_sample_path.sc  fs_single_channel_texture.sc  fs_squircle.sc  fs_tinted_texture.sc  fs_triangle.sc  shader_utils.sh  vs_arc.sc  vs_clear.sc  vs_conservative_path_fill.sc  vs_line.sc  vs_path_fill.sc  vs_sample_path.sc  vs_tinted_texture.sc
visage_graphics/tests/: canvas_tests.cpp  font_tests.cpp  gradient_tests.cpp  path_tests.cpp
visage_graphics/win32/: emoji_win32.cpp
visage_ui/: CMakeLists.txt  events.h  frame.cpp  frame.h  layout.cpp  layout.h  scroll_bar.cpp  scroll_bar.h  svg_frame.cpp  svg_frame.h
visage_utils/: CMakeLists.txt  clone_ptr.h  defines.h  dimension.h  events.h  file_system.cpp  file_system.h  space.h  string_utils.cpp  string_utils.h  time_utils.cpp
visage_utils/tests/: dimension_tests.cpp  string_utils_tests.cpp  thread_utils_tests.cpp
visage_utils/win32/: child_process_win32.cpp
visage_widgets/: CMakeLists.txt  button.cpp  button.h  graph_line.cpp  graph_line.h  heat_map.cpp  heat_map.h
visage_windowing/: CMakeLists.txt  windowing.cpp  windowing.h
visage_windowing/emscripten/: windowing_emscripten.cpp
visage_windowing/linux/: windowing_wayland.cpp  windowing_wayland.h  windowing_x11.cpp
visage_windowing/macos/: windowing_macos.h  windowing_macos.mm
visage_windowing/tests/: windowing_tests.cpp
visage_windowing/win32/: windowing_win32.cpp  windowing_win32.h
(+38 files in other folders)
